# ChatServer_Cluster

./: .gitignore  CMakeLists.txt  README.md  create.sql  install.sh
include/: public.hpp
include/server/: ChatServer.hpp  ChatService.hpp
include/server/database/: mysqldb.hpp  redis.hpp
include/server/model/: FriendModel.hpp  Group.hpp  GroupModel.hpp  GroupUser.hpp  OfflineMsgModel.hpp  User.hpp  UserModel.hpp
src/client/: CMakeLists.txt  client.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp
src/server/database/: mysqldb.cpp  redis.cpp
src/server/model/: FriendModel.cpp  GroupModel.cpp  OfflineMsgModel.cpp  UserModel.cpp
thirdpart/: json.hpp
